logs/validate.20260408-053803.log
Mode: isolate
Isolate: including Chap47 Chap18 Chap02
error: unexpected token, expected `;`
   --> src/Chap47/LinkedListChainedHashTableStEph.rs:565:25
    |
565 |                         implies !#[trigger] new_table.table@[idx]
    |                         ^^^^^^^

error[E0425]: cannot find type `LinkedListChainedHashTableStEph` in this scope
   --> src/Chap47/LinkedListChainedHashTableStEph.rs:623:30
    |
623 |     impl std::fmt::Debug for LinkedListChainedHashTableStEph {
    |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `LinkedListChainedHashTableStEph` in this scope
   --> src/Chap47/LinkedListChainedHashTableStEph.rs:629:32
    |
629 |     impl std::fmt::Display for LinkedListChainedHashTableStEph {
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 5s
Sampled Memory Usage: peak rust_verify RSS: 3672MB, peak z3 RSS: 523MB, min free: 22723MB
Sampled CPU Usage: rust_verify: 43s, z3 children: 27s
